  whitespace is significant. 
  
=== Bug fixes in 1.15 ===
* Fixing the caching issue by using -{T|xxx}- syntax (only applies on wiki with LanguageConverter class)
* Improving the efficiency by using -{A|xxx}- syntax (only applies on wiki with LanguageConverter class)
* (bug 16968) Special:Upload no longer throws useless warnings.

== API changes in 1.15 ==
* (bug 16798) JSON encoding errors for some characters outside the BMP
* (bug 16629) prop=info&inprop=protection lists empty legacy protections
  incorrectly
* (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
  and listing all deleted pages possible

=== Languages updated in 1.15 ===

MediaWiki supports over 300 languages. Many localisations are updated
regularly. Below only new and removed languages are listed.

== Compatibility ==

MediaWiki 1.15 requires PHP 5 (5.2 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.15 has several database changes since 1.14, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.


=== Caveats ===
